New changes based on user feedback.

--- a/index2.html
+++ b/index2.html
@@ -85,31 +85,31 @@
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Fajr</div>
-          <div class="panel-body" id="fajr">00:00 AM</div>
+          <div class="panel-heading" id="fajr">00:00 AM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Dhuhr</div>
-          <div class="panel-body" id="dhuhr">00:00 PM</div>
+          <div class="panel-heading" id="dhuhr">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Asr</div>
-          <div class="panel-body" id="asr">00:00 PM</div>
+          <div class="panel-heading" id="asr">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Maghrib</div>
-          <div class="panel-body" id="maghrib">00:00 PM</div>
+          <div class="panel-heading" id="maghrib">00:00 PM</div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Isha</div>
-          <div class="panel-body" id="isha">00:00 PM</div>
+          <div class="panel-heading" id="isha">00:00 PM</div>
         </div>
       </div>
     </div>
