--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+  <!-- This meta tag will auto-refresh the whole page. -->
+  <meta http-equiv="refresh" content="3">
   <title>Bosnian Islamic Centre | Prayer Clock</title>
 
   <!-- Bootstrap -->
