--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
-        document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " " + timeSuffix;
+        document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes;
       }
     }
   });
