testing out new size and 1

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           }
         }
         checkHours(hour);
-        if (hour < 10) {hour = "1" + hour};
+        // if (hour < 10) {hour = "0" + hour};
         console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
