--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
         console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
-        if(salatKey[i] === 'sunrise') {document.getElementById(salatId[i].innerHTML = hour + ":" + minutes + " am")}
-        else {document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes};
+        if(salatKey[i] == 'sunrise') {document.getElementById(salatId[i].innerHTML = hour + ":" + minutes + " am");}
+        else {document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes;}
       }
     }
   });
