--- a/index.html
+++ b/index.html
@@ -173,8 +173,11 @@
         console.log(hour);
 
         // using the salatId[i] to access each div and write the proper prayer time.
-        if(i === 1) {document.getElementById(salatId[i].innerHTML = hour + ":" + minutes + " am");}
-        else {document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes;}
+        if(salatId[i] == 'sunrise') {
+          document.getElementById(salatId[i].innerHTML = hour + ":" + minutes + " am");
+        } else {
+          document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes;
+        }
       }
     }
   });
