stupid commas always getting in the way of good code.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         // using the salatId[i] to access each div and write the proper prayer time.
         if(salatId[i] == 'sunrise') {
-          document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " am");
+          document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes + " am";
         } else {
           document.getElementById(salatId[i]).innerHTML = hour + ":" + minutes;
         }
