adding back timesuffixes.

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         </div>
       </div>
 
-      <div class="col-md-3 pull-right">
+      <div class="col-md-4 pull-right">
         <div class="panel panel-warning">
           <div class="panel-heading">Jumu'a</div>
-          <div class="panel-body" id="jumua">1:30</div>
+          <div class="panel-body" id="jumua">1:30 pm</div>
         </div>
       </div>
 
