--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
   </script>
 </head>
 <body onload="startTime()">
-  <div class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
       <!--<span class="navbar-text navbar-center"><b class="text-success">Bosnian Islamic Centre</b></span>-->
-      <span class="navbar-text navbar-right"><b class="label label-default" id="islamicDate">| Islamic Date Here |</b></span>
-      <span class="navbar-text"><b class="label label-default" id="date">| Date Here |</b></span>
+      <div class="navbar navbar-default navbar-static-top">
+        <span class="navbar-text"><b class="label label-success" id="date">| Date Here |</b></span>
+        <span class="navbar-text navbar-right"><b class="label label-success" id="islamicDate">| Islamic Date Here |</b></span>
+      </div>
     </div>
-  </div>
 
   <div class="container-fluid">
     <div class="row  text-center">
