--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         </div>
       </div>
 
+      <div class="col-md-2">
+        <img src="Bismillah.png">
+      </div>
+
       <div class="col-md-4 pull-right">
         <div class="panel panel-warning">
           <div class="panel-heading">Jumu'a</div>
