--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         </div>
       </div>
 
-      <div class="col-md-2">
-        <img src="Bismillah.png">
+      <div class="col-md-2 col-md-offset-1">
+        <img src="Bismillah.png" class="img-responsive">
       </div>
 
       <div class="col-md-4 pull-right">
