--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
         var newDate = new Date(dataString);
         var hour = newDate.getHours();
         var minutes = newDate.getMinutes();
+        console.log(minutes);
         var timeSuffix = "AM";
 
         // function to check whether or not hours are above 12 PM and to modify suffix accordingly.
