--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         var newDate = new Date(dataString);
         var hour = newDate.getHours();
-        var minutes = newDate.getMinutes();
+        var minutes = ('0' + newDate.getMinutes()).slice(-2);
         console.log(minutes);
         var timeSuffix = "AM";
 
