--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       <div class="col-md-2">
         <div class="panel panel-success">
           <div class="panel-heading">Isha</div>
-          <div class="panel-body" id="ishah">10:10</div>
+          <div class="panel-body" id="isha">00:00 PM</div>
         </div>
       </div>
     </div>
