--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         h + ":" + m + "<small class=\"text-muted\";'>:" + s + " " + timeSuffix + "</small>";
 
         var options = {'weekday':'long', month: 'long', day: 'numeric', year: 'numeric'};
-        document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('en-US-u-ca-islamic', options);
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
+        today.setDate(today.getDate() - 1);
+        document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('en-US-u-ca-islamic', options);
         var t = setTimeout(startTime, 500);
     }
     function checkHour(i) {
