--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         var options = {month: 'long', day: 'numeric', year: 'numeric'};
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
         document.getElementById('weekday').innerHTML = today.toLocaleDateString('en-US', {weekday : 'long'})
-        today.setDate(today.getDate() - 1);
+        // In order to move the Islamic date forward or back, uncomment the code below. 
+        // modify the integer value by number of days, use - to go backward, + to go forward.
+        // today.setDate(today.getDate() - 1);
         document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('en-US-u-ca-islamic', options);
         var t = setTimeout(startTime, 500);
     }
