Changed year to 2017 in Date object. Removed leap day from February this year.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
 
       // Calculating number of days elapsed since the start of the year.
-      start = new Date("January 1, 2016");
+      start = new Date("January 1, 2017"); // *** You must change the year in this date every new years. ***
       today = new Date();
       var one_day = 1000 * 60 * 60 * 24;
 
