--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         document.getElementById('weekday').innerHTML = today.toLocaleDateString('en-US', {weekday : 'long'})
         // In order to move the Islamic date forward or back, uncomment the code below.
         // modify the integer value by number of days, use - to go backward, + to go forward.
-        // today.setDate(today.getDate() - 1);
+        today.setDate(today.getDate() - 1);
         document.getElementById('islamicDate').innerHTML = islamicDateFormat(today);
         var t = setTimeout(startTime, 500);
     }
