Reverted back to weekday names.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="navbar navbar-default navbar-static-top">
       <div class="container-fluid">
         <span class="navbar-text"><b class="label label-success" id="date">| Date Here |</b></span>
-        <span class="navbar-text col-md-4" style="text-align: center"><b class="label label-success" id="weekday_fixed"> Eid Mubarak </b></span>
+        <span class="navbar-text col-md-4" style="text-align: center"><b class="label label-success" id="weekday">| Weekday Here |</b></span>
         <span class="navbar-text navbar-right"><b class="label label-success" id="islamicDate">| Islamic Date Here |</b></span>
       </div>
     </div>
