--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         var options = {month: 'long', day: 'numeric', year: 'numeric'};
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
-        // document.getElementById('weekday').innerHTML = today.toLocaleDateString('en-US', {weekday : 'long'})
+        document.getElementById('weekday').innerHTML = today.toLocaleDateString('en-US', {weekday : 'long'})
         // In order to move the Islamic date forward or back, uncomment the code below.
         // modify the integer value by number of days, use - to go backward, + to go forward.
         today.setDate(today.getDate());
