--- a/index2.html
+++ b/index2.html
@@ -17,12 +17,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/4.1.2/papaparse.js"></script>
 
   <script>
-    var DJHeading = ['Dhuhr', 'Jumua'], i = 0;
-    function changeDJ() {
-      i = (i > 0) ? 0 : 1;
-      document.getElementById('djcarousel').innerHTML = DJHeading[i];
-      setTimeout(changeDJ, 8000);
-    }
+    var i = 0;
     function startTime() {
         var today = new Date();
         var h = today.getHours();
@@ -36,13 +31,36 @@
         document.getElementById("time").innerHTML =
         h + ":" + m + "<small class=\"text-muted\";'>:" + s + " " + timeSuffix + "</small>";
 
-        var options = {'weekday':'long', month: 'long', day: 'numeric', year: 'numeric'};
-        document.getElementById('islamicDate').innerHTML = today.toLocaleDateString('en-US-u-ca-islamic', options);
+        var options = {month: 'long', day: 'numeric', year: 'numeric'};
         document.getElementById('date').innerHTML = today.toLocaleDateString('en-US', options);
+        document.getElementById('weekday').innerHTML = today.toLocaleDateString('en-US', {weekday : 'long'})
+        // In order to move the Islamic date forward or back, uncomment the code below.
+        // modify the integer value by number of days, use - to go backward, + to go forward.
+        today.setDate(today.getDate());
+        document.getElementById('islamicDate').innerHTML = islamicDateFormat(today);
         var t = setTimeout(startTime, 500);
+    }
+    function islamicDateFormat(today) {
+      var monthNames = new Array("Muharram",
+                                "Safar",
+                                "Rabi'ul Awwal",
+                                "Rabi'ul Akhir",
+                                "Jumadal Ula",
+                                "Jumadal Akhira",
+                                "Rajab",
+                                "Sha'ban",
+                                "Ramadan",
+                                "Shawwal",
+                                "Dhul Qa'ada",
+                                "Dhul Hijja");
+      month = parseInt(today.toLocaleDateString('en-US-u-ca-islamic').slice(0, 1)) - 1;
+      options = {day: 'numeric', year: 'numeric'};
+      i = monthNames[month] + " " + today.toLocaleDateString('en-US-u-ca-islamic', options);
+      return i;
     }
     function checkHour(i) {
         if (i > 12) {i = i - 12;} // converting to 12 hour format
+        else if (i == 0) {i = 12;} // Midnight is 0, so in order to present properly needs to be set to 12.
         return i;
     }
     function checkTime(i) {
@@ -52,10 +70,11 @@
   </script>
 </head>
 <body onload="startTime()">
-    <div class="container-fluid">
       <!--<span class="navbar-text navbar-center"><b class="text-success">Bosnian Islamic Centre</b></span>-->
-      <div class="navbar navbar-default navbar-static-top">
+    <div class="navbar navbar-default navbar-static-top">
+      <div class="container-fluid">
         <span class="navbar-text"><b class="label label-success" id="date">| Date Here |</b></span>
+        <span class="navbar-text col-md-4" style="text-align: center"><b class="label label-success" id="weekday">| Weekday Here |</b></span>
         <span class="navbar-text navbar-right"><b class="label label-success" id="islamicDate">| Islamic Date Here |</b></span>
       </div>
     </div>
@@ -133,7 +152,7 @@
       console.log("Parsing complete: first object", results.data[0]["prayer_date"]);
 
       // Calculating number of days elapsed since the start of the year.
-      start = new Date("January 1, 2016");
+      start = new Date("January 1, 2017"); // *** You must change the year in this date every new years. ***
       today = new Date();
       var one_day = 1000 * 60 * 60 * 24;
 
@@ -158,7 +177,8 @@
 
         var newDate = new Date(dataString);
         var hour = newDate.getHours();
-        var minutes = newDate.getMinutes();
+        var minutes = ('0' + newDate.getMinutes()).slice(-2);
+        console.log(minutes);
         var timeSuffix = "AM";
 
         // function to check whether or not hours are above 12 PM and to modify suffix accordingly.
